--- a/src/truck.css
+++ b/src/truck.css
@@ -310,3 +310,8 @@ body
   height:80px;
   top:-72px;
 }
+@media screen and (max-width: 800px) {
+  .left, .main, .right {
+    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+  }
+}
