updated the css files

--- a/src/truck.css
+++ b/src/truck.css
@@ -315,3 +315,8 @@ body
     width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
   }
 }
+@media only screen and (min-device-width: 400px){
+  .truck-container{
+    width: 30%;
+  }
+}
