--- a/src/envelope.css
+++ b/src/envelope.css
@@ -99,8 +99,8 @@
         opacity: 1;
     }
 } 
-@media screen and (max-width: 800px) {
-  .left, .main, .right {
-    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+@media only screen and (min-device-width: 400px){
+  .envelope-container{
+    width: 40%;
   }
 }
